--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -69,7 +69,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Важность"
+                    android:text="@string/urgency"
                     android:textColor="@color/label.primary"
                     android:textSize="16sp"
                     />
@@ -77,7 +77,7 @@
                     android:id="@+id/tv_urgency"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Нет"
+                    android:text="@string/none"
                     android:textColor="@color/label.tertiary"
                     android:textSize="14sp"
                     />
@@ -108,7 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:fontFamily="@font/regular"
-                    android:text="Сделать до"
+                    android:text="@string/deadline"
                     android:textColor="@color/label.primary"
                     android:textSize="16sp"
                     android:layout_marginTop="20dp"
@@ -152,7 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/regular"
-                android:text="Удалить"
+                android:text="@string/delete"
                 android:textColor="@color/label.disable"
                 android:textSize="16sp"
                 android:layout_gravity="center_vertical"
